<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/updateschedule_background"
        android:padding="20dp"
        android:weightSum="1.0">
        <Space
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0px" />
        <TextView
            android:layout_weight="0.1"
            android:id="@+id/switchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/RemindersText"
            android:textColor="@color/dark_grey"
            android:text="@string/remindersTextView" />
        <Switch
            android:layout_weight="0.1"
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/remindersON"
            android:textOff="@string/remindersOFF" />
        <Space
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="0px" />
        <TextView
            android:layout_weight="0.1"
            android:id="@+id/seekBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/MinutesText"
            android:textColor="@color/dark_grey" />
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Space
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="0px" />
        <Button
            android:layout_weight="0.1"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:text="@string/savesettings_button" />
        <Space
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0px" />
    </LinearLayout>
</RelativeLayout>
